--- a/.github/workflows/nanopi-r2s-openwrt.yml
+++ b/.github/workflows/nanopi-r2s-openwrt.yml
@@ -1,6 +1,11 @@
 name: NanoPi R2S OpenWrt
 
 on:
+  push:
+    branches:
+      - master
+    paths:
+      - 'go'
   schedule:
     - cron: 34 5 * * *
   watch:
