--- a/.github/workflows/nanopi-r2s-openwrt.yml
+++ b/.github/workflows/nanopi-r2s-openwrt.yml
@@ -13,6 +13,26 @@ jobs:
   OpenWrt-Snapshot:
     runs-on: ubuntu-18.04
     steps:
+   Cleanup-Old-Artifacts:
+    needs: [OpenWrt-18_06,OpenWrt-Snapshot]
+    runs-on: ubuntu-18.04
+    steps:
+    - name: Cleanup Old Action Artifacts
+      uses: kolpav/purge-artifacts-action@v1
+      with:
+        token: ${{ github.token }}
+        expire-in: 7d
+  Cleanup-Workflow-Logs:
+    needs: [OpenWrt-18_06,OpenWrt-Snapshot]
+    runs-on: ubuntu-18.04
+    steps:
+      - name: Cleanup Workflow Logs
+        uses: ActionsRML/delete-workflow-runs@main
+        with:
+          token: ${{ github.token }}
+          repository: ${{ github.repository }}
+          retain_days: 7
+          keep_minimum_runs: 3
     - name: Checkout Repository
       uses: actions/checkout@v2
     - name: Init Building Dependencies
