--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -1,4 +1,4 @@
-name: NanoPi R2S OpenWrt
+name: new
 
 on:
   push:
@@ -10,26 +10,6 @@ on:
     types: started
 
 jobs:
-  Cleanup-Old-Artifacts:
-    needs: [OpenWrt-Snapshot]
-    runs-on: ubuntu-18.04
-    steps:
-    - name: Cleanup Old Action Artifacts
-      uses: kolpav/purge-artifacts-action@v1
-      with:
-        token: ${{ github.token }}
-        expire-in: 7d
-  Cleanup-Workflow-Logs:
-    needs: [OpenWrt-Snapshot]
-    runs-on: ubuntu-18.04
-    steps:
-      - name: Cleanup Workflow Logs
-        uses: ActionsRML/delete-workflow-runs@main
-        with:
-          token: ${{ github.token }}
-          repository: ${{ github.repository }}
-          retain_days: 7
-          keep_minimum_runs: 3
   OpenWrt-Snapshot:
     runs-on: ubuntu-18.04
     steps:
